--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
    
     <header class="section">
     <nav>  
-    <h3 lang="en">WebStudio</h3>
 <ul>
+    <h3 lang="en">WebStudio</h3>
     <li><a href="link">Студия</a> </li> 
     <li><a href="link">Портфолио</a></li>
     <li><a href="link">Контакты</a></li> 
+</ul>
     </nav>
+    <ul>
     <li><a href="link">info@devstudio</a></li> 
     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
@@ -57,19 +59,19 @@
 <ul>
 <li class="photo-1"><img class="our-team" src="img/img (3).jpg"  width= 270;
 height= 260; alt="our-product-designer">
-<p> Игорь Демьяненко </p> 
-<p> Product Designer</p></li>
+<p class="our-team-profesionals-1"> Игорь Демьяненко </p> 
+<p class="our-team-profesionals-position-1"> Product Designer</p></li>
 <li class="photo-2"><img class="our-team" src="img/img (4).jpg" width= 270;
 height= 260; alt="our-frontend-developer"  >
-<h4>Ольга Репина</h4> <p>Frontend Developer</p></li>
+<p class="our-team-profesionals-2">Ольга Репина</p> 
+<p class="our-team-profesionals-position-2">Frontend Developer</p></li>
 <li class="photo-3"><img class="our-team" src="img/img (5).jpg" width= 270;
-height= 260; alt="our-marketing-specialist" >
-<h4>Николай Тарасов</h4> <p>Marketing</p></li>
-<li class="photo-4"><img class="our-team" src="img/img (6).jpg"width= 270;
-height= 260;
-     alt="our-ui-designer">
-
-<h4>Михаил Ермаков</h4><p>UI Designer</p></li>
+height= 260; alt="our-marketing-specialist">
+<p class="our-team-profesionals-3">Николай Тарасов</p> 
+<p class="our-team-profesionals-position-3">Marketing</p></li>
+<li class="photo-4"><img class="our-team" src="img/img (6).jpg"width= 270; height= 260; alt="our-ui-designer">
+<p class="our-team-profesionals-4">Михаил Ермаков</p>
+<p class="our-team-profesionals-position-4">UI Designer</p></li>
 </ul>
     </section>
     
@@ -79,7 +81,7 @@ height= 260;
 
             <li>г.Киев,пр-т Леси Украинки,26</li>
             <li><a href="@example.com"> @example.com</a></li>
-            <li> <a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
 </section>
 
