--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,48 @@
     <title>Document</title>
 </head>
 <body>
+<header class="section">
+    <nav>
+        <ul>
+            <h3 lang="en">WebStudio</h3>
+            <li><a href="link">Студия</a> </li>
+            <li><a href="link">Портфолио</a></li>
+            <li><a href="link">Контакты</a></li>
+        </ul>
+    </nav>
+    <ul>
+        <li><a href="link">info@devstudio</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+</header>
+    <section>
+<ul>
+<li><a href="link">Все</a></li>
+<li><a href="link">Веб-сайты</a></li>
+<li><a href="link">Приложения</a></li>
+<li><a href="link">Дизайн</a></li>
+<li><a href="link">Маркетинг</a></li>
+</ul>
+</section>
+<main>
+
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</main>
+<section class="about-us">
+    <ul>
+        <h3>WebStudio</h3>
+        <li>г.Киев,пр-т Леси Украинки,26</li>
+        <li><a href="@example.com"> @example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    </ul>
+</section>
+
+
     
 </body>
 </html>
