--- a/portfolio.html
+++ b/portfolio.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css"
 </head>
 <body>
 <header class="section">
     <nav>
         <ul>
-            <h3 lang="en">WebStudio</h3>
-            <li><a href="link">Студия</a> </li>
-            <li><a href="link">Портфолио</a></li>
-            <li><a href="link">Контакты</a></li>
+            <h3 lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
+            <li><a class="studio" href="link">Студия</a></li>
+            <li><a class="portfolio" href="link">Портфолио</a></li>
+            <li><a class="portfolio" href="link">Контакты</a></li>
         </ul>
     </nav>
     <ul>
-        <li><a href="link">info@devstudio</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="studio" href="link">info@devstudio</a></li>
+        <li><a class="our-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
     <section>
@@ -39,14 +40,15 @@
         <li></li>
     </ul>
 </main>
-<section class="about-us">
+<footer class="about-us">
     <ul>
-        <h3>WebStudio</h3>
-        <li>г.Киев,пр-т Леси Украинки,26</li>
-        <li><a href="@example.com"> @example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <h3><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
+
+        <li class="adress">г.Киев,пр-т Леси Украинки,26</li>
+        <li><a class="our-tell" href="@example.com"> @example.com</a></li>
+        <li><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
-</section>
+</footer>
 
 
     
