--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
 <section class="about-us">
-    <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
+    <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
     <h3><button class="button" type="button"> Заказать услугу</h3>
     </section>    
     <main>
