--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul>
     <h3 lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
     <li><a class="studio" href="link">Студия</a></li>
-    <li><a class="portfolio" href="link">Портфолио</a></li>
+    <li><a class="portfolio" href="./portfolio.html">Портфолио</a></li>
     <li><a class="portfolio" href="link">Контакты</a></li> 
 </ul>
     </nav>
@@ -68,7 +68,7 @@
         <h3><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
 
             <li class="adress">г.Киев,пр-т Леси Украинки,26</li>
-            <li><a class="our-tell" href="@example.com"> @example.com</a></li>
+            <li><a class="our-tell" href="mailto:@example.com"> @example.com</a></li>
             <li><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </footer>
