--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="css/styles.css"
 </head>
 <body>
@@ -34,10 +34,15 @@
 <main>
 
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><img class="" src="./img/img (7).jpg"></li>
+        <li><img src="./img/img (8).jpg" alt=""> </li>
+        <li><img src="./img/img (9).jpg" </li>
+        <li><img src="./img/img (10).jpg" </li>
+        <li><img src="./img/img (11).jpg" </li>
+        <li><img src="./img/img (12).jpg" </li>
+        <li><img src="./img/img (13).jpg" </li>
+        <li><img src="./img/img (14).jpg" </li>
+        <li><img src="./img/img (15).jpg" </li>
     </ul>
 </main>
 <footer class="about-us">
