--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,23 @@
 <main>
 
     <ul>
-        <li><img class="" src="./img/img (7).jpg"></li>
-        <li><img src="./img/img (8).jpg" alt=""> </li>
-        <li><img src="./img/img (9).jpg" </li>
-        <li><img src="./img/img (10).jpg" </li>
-        <li><img src="./img/img (11).jpg" </li>
-        <li><img src="./img/img (12).jpg" </li>
-        <li><img src="./img/img (13).jpg" </li>
-        <li><img src="./img/img (14).jpg" </li>
-        <li><img src="./img/img (15).jpg" </li>
+        <li><img class="" src="./img/img (7).jpg"><h4 class="title-item">Технокряк</h4>
+        <p class="portfolio-item-name">Веб-сайт</p></li>
+        <li><img src="./img/img (8).jpg" alt=""><h4 class="title-item">Постер New Orlean vs Golden Star</h4><p class="portfolio-item-name">Дизайн</p></li>
+        <li><img src="./img/img (9).jpg"><h4 class="title-item">Ресторан Seafood</h4>
+        <p class="portfolio-item-name">Приложение</p></li>
+        <li><img src="./img/img (10).jpg"><h4 class="title-item">Проект Prime</h4>
+        <p class="portfolio-item-name">Маркетинг</p></li>
+        <li><img src="./img/img (11).jpg"><h4 class="title-item">Проект Boxes</h4>
+        <p class="portfolio-item-name">Приложение</p></li>
+        <li><img src="./img/img (12).jpg"><h4 class="title-item">Inspiration has no Borders</h4>
+        <p class="portfolio-item-name">Веб-сайт</p></li>
+        <li><img src="./img/img (13).jpg"><h4 class="title-item">Издание Limited Edition</h4>
+        <p class="portfolio-item-name">Дизайн</p></li>
+        <li><img src="./img/img (14).jpg"><h4 class="title-item">Проект LAB</h4>
+        <p class="portfolio-item-name">Маркетинг</p></li>
+        <li><img src="./img/img (15).jpg"><h4 class="title-item">Growing Business</h4>
+        <p class="portfolio-item-name">Приложение</p></li>
     </ul>
 </main>
 <footer class="about-us">
