--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 </header>
     <section>
 <ul>
-<li><a href="link">Все</a></li>
+<li><a class="about-all" href="link">Все</a></li>
 <li><a href="link">Веб-сайты</a></li>
 <li><a href="link">Приложения</a></li>
 <li><a href="link">Дизайн</a></li>
