--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css"
 </head>
 <body>
@@ -12,7 +18,7 @@
     <header class="section">
     <nav>  
 <ul>
-    <h3 lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
+    <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
     <li><a class="studio" href="link">Студия</a></li>
     <li><a class="portfolio" href="./portfolio.html">Портфолио</a></li>
     <li><a class="portfolio" href="link">Контакты</a></li> 
@@ -31,10 +37,10 @@
     <main>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><h4>Внимание к деталям</h4><p class="article-about-us-description-1">Идейные соображения, а также начало повседневной работы по формированию позиции</p></li>
-            <li><h4>Пунктуальность</h4> <p class="article-about-us-description-2">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-            <li><h4>Планирование</h4> <p class="article-about-us-description-3">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-            <li><h4>Современные технологии</h4> <p class="article-about-us-description-4">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p></li>
+            <li><h4>Внимание к деталям</h4><p class="article-about-us-description">Идейные соображения, а также начало повседневной работы по формированию позиции</p></li>
+            <li><h4>Пунктуальность</h4> <p class="article-about-us-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+            <li><h4>Планирование</h4> <p class="article-about-us-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+            <li><h4>Современные технологии</h4> <p class="article-about-us-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p></li>
         </ul>
         
         <img class="image-1" src="img/img (2).jpg" width= "370"; height= 294;
@@ -48,24 +54,24 @@
     <section class="our-team-photos">
 <h2>Наша команда</h2>
 <ul>
-<li class="photo-1"><img class="our-team" src="img/img (3).jpg"  width= 270; height= 260; alt="our-product-designer">
-<p class="our-team-profesionals-1"> Игорь Демьяненко </p> 
+<li class="photo"><img class="our-team" src="img/img (3).jpg"  width= 270; height= 260; alt="our-product-designer">
+<h3 class="our-team-profesionals-1">Игорь Демьяненко</h3> 
 <p class="our-team-profesionals-position-1">Product Designer</p></li>
-<li class="photo-2"><img class="our-team" src="img/img (4).jpg" width= 270; height= 260; alt="our-frontend-developer">
-<p class="our-team-profesionals-2">Ольга Репина</p> 
+<li class="photo"><img class="our-team" src="img/img (4).jpg" width= 270; height= 260; alt="our-frontend-developer">
+<h3 class="our-team-profesionals-2">Ольга Репина</h3> 
 <p class="our-team-profesionals-position-2">Frontend Developer</p></li>
-<li class="photo-3"><img class="our-team" src="img/img (5).jpg" width= 270; height= 260; alt="our-marketing-specialist">
-<p class="our-team-profesionals-3">Николай Тарасов</p> 
+<li class="photo"><img class="our-team" src="img/img (5).jpg" width= 270; height= 260; alt="our-marketing-specialist">
+<h3 class="our-team-profesionals-3">Николай Тарасов</h3> 
 <p class="our-team-profesionals-position-3">Marketing</p></li>
-<li class="photo-4"><img class="our-team" src="img/img (6).jpg"width= 270; height= 260; alt="our-ui-designer">
-<p class="our-team-profesionals-4">Михаил Ермаков</p>
+<li class="photo"><img class="our-team" src="img/img (6).jpg"width= 270; height= 260; alt="our-ui-designer">
+<h3 class="our-team-profesionals-4">Михаил Ермаков</h3>
 <p class="our-team-profesionals-position-4">UI Designer</p></li>
 </ul>
     </section>
     
     <footer class="about-us">
         <ul>
-        <h3><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
+        <h3 class="style-studio-name"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
 
             <li class="adress">г.Киев,пр-т Леси Украинки,26</li>
             <li><a class="our-tell" href="mailto:@example.com"> @example.com</a></li>
