--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <header class="section">
     <nav>
         <ul>
-            <h3 lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
+            <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
             <li><a class="studio" href="link">Студия</a></li>
             <li><a class="portfolio" href="link">Портфолио</a></li>
             <li><a class="portfolio" href="link">Контакты</a></li>
@@ -22,7 +22,8 @@
         <li><a class="our-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
-    <section>
+ <main>   
+<section>
 <ul>
 <li><a class="about-all" href="link">Все</a></li>
 <li><a href="link">Веб-сайты</a></li>
@@ -31,31 +32,30 @@
 <li><a href="link">Маркетинг</a></li>
 </ul>
 </section>
-<main>
 
     <ul>
-        <li><img class="" src="./img/img (7).jpg"><h4 class="title-item">Технокряк</h4>
+        <li><img class="" src="./img/img (7).jpg"><h3 class="title-item">Технокряк</h3>
         <p class="portfolio-item-name">Веб-сайт</p></li>
-        <li><img src="./img/img (8).jpg" alt=""><h4 class="title-item">Постер New Orlean vs Golden Star</h4><p class="portfolio-item-name">Дизайн</p></li>
-        <li><img src="./img/img (9).jpg"><h4 class="title-item">Ресторан Seafood</h4>
+        <li><img src="./img/img (8).jpg" alt=""><h3 class="title-item">Постер New Orlean vs Golden Star</h3><p class="portfolio-item-name">Дизайн</p></li>
+        <li><img src="./img/img (9).jpg"><h3 class="title-item">Ресторан Seafood</h3>
         <p class="portfolio-item-name">Приложение</p></li>
-        <li><img src="./img/img (10).jpg"><h4 class="title-item">Проект Prime</h4>
+        <li><img src="./img/img (10).jpg"><h3 class="title-item">Проект Prime</h3>
         <p class="portfolio-item-name">Маркетинг</p></li>
-        <li><img src="./img/img (11).jpg"><h4 class="title-item">Проект Boxes</h4>
+        <li><img src="./img/img (11).jpg"><h3 class="title-item">Проект Boxes</h3>
         <p class="portfolio-item-name">Приложение</p></li>
-        <li><img src="./img/img (12).jpg"><h4 class="title-item">Inspiration has no Borders</h4>
+        <li><img src="./img/img (12).jpg"><h3 class="title-item">Inspiration has no Borders</h3>
         <p class="portfolio-item-name">Веб-сайт</p></li>
-        <li><img src="./img/img (13).jpg"><h4 class="title-item">Издание Limited Edition</h4>
+        <li><img src="./img/img (13).jpg"><h3 class="title-item">Издание Limited Edition</h3>
         <p class="portfolio-item-name">Дизайн</p></li>
-        <li><img src="./img/img (14).jpg"><h4 class="title-item">Проект LAB</h4>
+        <li><img src="./img/img (14).jpg"><h3 class="title-item">Проект LAB</h3>
         <p class="portfolio-item-name">Маркетинг</p></li>
-        <li><img src="./img/img (15).jpg"><h4 class="title-item">Growing Business</h4>
+        <li><img src="./img/img (15).jpg"><h3 class="title-item">Growing Business</h3>
         <p class="portfolio-item-name">Приложение</p></li>
     </ul>
 </main>
 <footer class="about-us">
     <ul>
-        <h3><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
+        <h3 class="style-studio-name"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
 
         <li class="adress">г.Киев,пр-т Леси Украинки,26</li>
         <li><a class="our-tell" href="@example.com"> @example.com</a></li>
