--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,11 @@
  <main>   
 <section>
 <ul>
-<li><a class="about-all" href="link">Все</a></li>
-<li><a href="link">Веб-сайты</a></li>
-<li><a href="link">Приложения</a></li>
-<li><a href="link">Дизайн</a></li>
-<li><a href="link">Маркетинг</a></li>
+<li><button type="button" class="about-all">Все</button></li>
+<li><button type="button">Веб-сайты</button></li>
+<li><button type="button">Приложения</button></li>
+<li><button type="button">Дизайн</button></li>
+<li><button type="button">Маркетинг</button></li>
 </ul>
 </section>
 
