--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="./css/styles.css"
 </head>
 <body>
 <header class="section">
@@ -25,11 +25,11 @@
  <main>   
 <section>
 <ul>
-<li><button type="button" class="about-all">Все</button></li>
-<li><button type="button">Веб-сайты</button></li>
-<li><button type="button">Приложения</button></li>
-<li><button type="button">Дизайн</button></li>
-<li><button type="button">Маркетинг</button></li>
+<li><button type="button" class="about-all"><p class="portfolio-filer">Все</p></button></li>
+<li><button type="button"><p class="portfolio-filer"> Веб-сайты</p></button></li>
+<li><button type="button"><p class="portfolio-filer"> Приложения</p></button></li>
+<li><button type="button"><p class="portfolio-filer">Дизайн</p></button></li>
+<li><button type="button"><p class="portfolio-filer"> Маркетинг</p></button></li>
 </ul>
 </section>
 
