--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
     <nav>
         <ul>
             <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
-            <li><a class="studio" href="link">Студия</a></li>
-            <li><a class="portfolio" href="link">Портфолио</a></li>
-            <li><a class="portfolio" href="link">Контакты</a></li>
+            <li><a class="studio header-list" href="link">Студия</a></li>
+            <li><a class="portfolio header-list" href="link">Портфолио</a></li>
+            <li><a class="portfolio header-list" href="link">Контакты</a></li>
         </ul>
     </nav>
     <ul>
