--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <header class="section">
     <nav>  
 <ul>
-    <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
-    <li><a class="studio" href="link">Студия</a></li>
-    <li><a class="portfolio" href="./portfolio.html">Портфолио</a></li>
-    <li><a class="portfolio" href="link">Контакты</a></li> 
+    <h3 class="style-studio-name header-list" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
+    <li><a class="studio header-list " href="link">Студия</a></li>
+    <li><a class="portfolio header-list" href="./portfolio.html">Портфолио</a></li>
+    <li><a class="portfolio header-list" href="link">Контакты</a></li> 
 </ul>
     </nav>
     <ul>
-    <li><a class="studio" href="link">info@devstudio</a></li> 
-    <li><a class="our-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li><a class="studio header-list" href="link">info@devstudio</a></li> 
+    <li><a class="our-tell header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
     </header>
 
