--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
     <ul>
         <h3 class="style-studio-name"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
 
-        <li class="adress">г.Киев,пр-т Леси Украинки,26</li>
-        <li><a class="our-tell" href="@example.com"> @example.com</a></li>
-        <li><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
+        <li><a class="our-tell footer-contacts" href="@example.com"> @example.com</a></li>
+        <li><a class="our-tell footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
     </ul>
 </footer>
 
