--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
         </ul>
     </nav>
     <ul>
-        <li><a class="studio" href="link">info@devstudio</a></li>
-        <li><a class="our-tell" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="studio header-list" href="link">info@devstudio</a></li>
+        <li><a class="our-tell header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
  <main>   
