--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="section">
     <nav>  
 <ul>
-    <h3 class="style-studio-name header-list" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
+    <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
     <li><a class="studio header-list" href="link">Студия</a></li>
     <li><a class="portfolio header-list" href="./portfolio.html">Портфолио</a></li>
     <li><a class="portfolio header-list" href="link">Контакты</a></li> 
