--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
             <li><a class="our-tell footer-contacts" href="mailto:@example.com"> @example.com</a></li>
-            <li><a class="our-tell footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="footer-contacts"><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </footer>
 
