--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <section class="about-us">
     <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
-    <h3><button class="button" type="button"> Заказать услугу</h3>
+    <h3 class="button-color-text"><button class="button" type="button"> Заказать услугу</h3>
     </section>    
     <main>
         <h2>Чем мы занимаемся</h2>
