--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </nav>
     <ul>
     <li><a class="studio header-list" href="link">info@devstudio</a></li> 
-    <li><a class="our-tell header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li><a class="header-phone header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
     </header>
 
 <section class="about-us">
     <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
-    <h3 class="button-color-text"><button class="button" type="button"> Заказать услугу</h3>
+    <h3 class="button-color-text"><button class="button" type="button">Заказать услугу</h3>
     </section>    
     <main>
         <h2>Чем мы занимаемся</h2>
