--- a/portfolio.html
+++ b/portfolio.html
@@ -24,18 +24,18 @@
         </ul>
     </nav>
     <ul>
-        <li><a class="studio header-list" href="link">info@devstudio</a></li>
-        <li><a class="our-tell header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="studio header-phone header-list" href="link">info@devstudio</a></li>
+        <li><a class="header-phone header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
  <main>   
 <section>
 <ul>
-<li><button type="button" class="about-all"><p class="portfolio-filer">Все</p></button></li>
+<li><button type="button" class="about-all">Все</button></li>
 <li><button type="button"><p class="portfolio-filer"> Веб-сайты</p></button></li>
-<li><button type="button"><p class="portfolio-filer"> Приложения</p></button></li>
-<li><button type="button"><p class="portfolio-filer">Дизайн</p></button></li>
-<li><button type="button"><p class="portfolio-filer"> Маркетинг</p></button></li>
+<li><button type="button" class="portfolio-filer"> Приложения</button></li>
+<li><button type="button" class="portfolio-filer">Дизайн</button></li>
+<li><button type="button" class="portfolio-filer"> Маркетинг</button></li>
 </ul>
 </section>
 
