--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
 </ul>
     </header>
 
-<section class="about-us">
+<main>
+    <section class="about-us">
     <h1 class="big-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА </h1> 
     <h3 class="button-color-text"><button class="button" type="button">Заказать услугу</h3>
     </section>    
-    <main>
+    <section>
+        <ul>
+            <li><h3 class="title-description">ВНИМАНИЕ К ДЕТАЛЯМ</h3><p class="article-about-us-description">Идейные соображения, а также начало повседневной работы по формированию позиции</p></li>
+            <li><h3 class="title-description">ПУНКТУАЛЬНОСТЬ</h3> <p class="article-about-us-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+            <li><h3 class="title-description">ПЛАНИРОВАНИЕ</h3> <p class="article-about-us-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+            <li><h3 class="title-description">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3><p class="article-about-us-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p></li>
+        </ul>
+    </section>
+        <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><h3>Внимание к деталям</h3><p class="article-about-us-description">Идейные соображения, а также начало повседневной работы по формированию позиции</p></li>
-            <li><h3>Пунктуальность</h3> <p class="article-about-us-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-            <li><h3>Планирование</h3> <p class="article-about-us-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-            <li><h3>Современные технологии</h3> <p class="article-about-us-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p></li>
-        </ul>
-        
         <img class="image-1" src="img/img (2).jpg" width= "370"; height= 294;
         alt="close-up-image-programer-working-his-desk-office" >
         <img class="image-1" src="img/secondimg.jpg" width= "370"; height= 294
         alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones">
         <img class="image-1" src="img/img.jpg" width= "370"; height= 294
         alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet">
+        </ul>
+        </section>
     </main>
 
     <section class="our-team-photos">
