--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 <section>
 <ul>
 <li><button type="button" class="about-all">Все</button></li>
-<li><button type="button"><p class="portfolio-filer"> Веб-сайты</p></button></li>
+<li><button type="button" class="portfolio-filer"> Веб-сайты</button></li>
 <li><button type="button" class="portfolio-filer"> Приложения</button></li>
 <li><button type="button" class="portfolio-filer">Дизайн</button></li>
 <li><button type="button" class="portfolio-filer"> Маркетинг</button></li>
