--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css"
 </head>
-<body>
-   
+<body>   
     <header class="section">
     <nav>  
+    <a class="style-studio-name" lang="en" href="link"><span class="studio-name">Web</span><span >Studio</span></a>
 <ul>
-    <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
     <li><a class="studio header-list" href="link">Студия</a></li>
     <li><a class="portfolio header-list" href="./portfolio.html">Портфолио</a></li>
     <li><a class="portfolio header-list" href="link">Контакты</a></li> 
@@ -46,15 +45,13 @@
         <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-        <img class="image-1" src="img/img (2).jpg" width= "370"; height= 294;
-        alt="close-up-image-programer-working-his-desk-office" >
-        <img class="image-1" src="img/secondimg.jpg" width= "370"; height= 294
-        alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones">
-        <img class="image-1" src="img/img.jpg" width= "370"; height= 294
-        alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet">
+        <img class="image-1" src="img/img (2).jpg" width= "370"; height= "294"
+        alt="программист работает на планшете">
+        <img class="image-1" src="img/secondimg.jpg" width= "370" height="294" alt="дизайнеры разрабатывают новый дизайн приложения">
+        <img class="image-1" src="img/img.jpg" width= "370"; height= "294"
+        alt="креативный дизайнер работает на графическом планшете">
         </ul>
         </section>
-    </main>
 
     <section class="our-team-photos">
 <h2>Наша команда</h2>
@@ -73,11 +70,10 @@
 <p class="our-team-profesionals-position">UI Designer</p></li>
 </ul>
     </section>
-    
+    </main>
     <footer class="about-us">
+        <a class="style-studio-name" href="link"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></a>
         <ul>
-        <h3 class="style-studio-name"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
-
             <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
             <li><a class="our-tell footer-contacts" href="mailto:@example.com"> @example.com</a></li>
             <li class="footer-contacts"><a class="our-tell" href="tel:+380991111111">+38 099 111 11 11</a></li>
