корректировка картинок и хедера

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>   
     <header class="section">
     <nav>  
-    <a class="style-studio-name" lang="en" href="link"><span class="studio-name">Web</span><span >Studio</span></a>
+    <a class="style-studio-name" lang="en" href="link"><span class="studio-name">Web</span><span class="studio-name-header" >Studio</span></a>
 <ul>
     <li><a class="studio header-list" href="link">Студия</a></li>
     <li><a class="portfolio header-list" href="./portfolio.html">Портфолио</a></li>
@@ -45,10 +45,9 @@
         <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-        <img class="image-1" src="img/img (2).jpg" width= "370"; height= "294"
-        alt="программист работает на планшете">
-        <img class="image-1" src="img/secondimg.jpg" width= "370" height="294" alt="дизайнеры разрабатывают новый дизайн приложения">
-        <img class="image-1" src="img/img.jpg" width= "370"; height= "294"
+        <img class="image-1" src="./img/img2.jpg" width= "370"; height= "294" alt="программист работает на планшете">
+        <img class="image-1" src="./img/secondimg.jpg" width= "370" height="294" alt="дизайнеры разрабатывают новый дизайн приложения">
+        <img class="image-1" src="./img/img.jpg" width= "370"; height= "294"
         alt="креативный дизайнер работает на графическом планшете">
         </ul>
         </section>
@@ -56,16 +55,16 @@
     <section class="our-team-photos">
 <h2>Наша команда</h2>
 <ul>
-<li class="photo"><img class="our-team" src="img/img (3).jpg"  width= 270; height= 260; alt="our-product-designer">
+<li class="photo"><img class="our-team" src="./img/img3.jpg" width= 270; height= 260; alt="our-product-designer">
 <h3 class="our-team-profesionals">Игорь Демьяненко</h3> 
 <p class="our-team-profesionals-position">Product Designer</p></li>
-<li class="photo"><img class="our-team" src="img/img (4).jpg" width= 270; height= 260; alt="our-frontend-developer">
+<li class="photo"><img class="our-team" src="./img/img4.jpg" width= 270; height= 260; alt="our-frontend-developer">
 <h3 class="our-team-profesionals">Ольга Репина</h3> 
 <p class="our-team-profesionals-position">Frontend Developer</p></li>
-<li class="photo"><img class="our-team" src="img/img (5).jpg" width= 270; height= 260; alt="our-marketing-specialist">
+<li class="photo"><img class="our-team" src="./img/img5.jpg" width= 270; height= 260; alt="our-marketing-specialist">
 <h3 class="our-team-profesionals">Николай Тарасов</h3> 
 <p class="our-team-profesionals-position">Marketing</p></li>
-<li class="photo"><img class="our-team" src="img/img (6).jpg"width= 270; height= 260; alt="our-ui-designer">
+<li class="photo"><img class="our-team" src="./img/img6.jpg"width= 270; height= 260; alt="our-ui-designer">
 <h3 class="our-team-profesionals">Михаил Ермаков</h3>
 <p class="our-team-profesionals-position">UI Designer</p></li>
 </ul>
