--- a/portfolio.html
+++ b/portfolio.html
@@ -1,74 +1,133 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css"
-</head>
-<body>
-<header class="section">
-    <nav>
+  </head>
+  <body>
+    <header class="section">
+      <nav>
+        <a class="style-studio-name" lang="en" href="link"
+          ><span class="studio-name">Web</span
+          ><span class="studio-name-header">Studio</span></a
+        >
         <ul>
-            <h3 class="style-studio-name" lang="en"><span class="studio-name">Web</span><span>Studio</span></h3>
-            <li><a class="studio header-list" href="link">Студия</a></li>
-            <li><a class="portfolio header-list" href="link">Портфолио</a></li>
-            <li><a class="portfolio header-list" href="link">Контакты</a></li>
+          <li><a class="portfolio header-list" href="link">Студия</a></li>
+          <li><a class="studio header-list" href="link">Портфолио</a></li>
+          <li><a class="portfolio header-list" href="link">Контакты</a></li>
         </ul>
-    </nav>
-    <ul>
-        <li><a class="studio header-phone header-list" href="link">info@devstudio</a></li>
-        <li><a class="header-phone header-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-</header>
- <main>   
-<section>
-<ul>
-<li><button type="button" class="about-all">Все</button></li>
-<li><button type="button" class="portfolio-filer"> Веб-сайты</button></li>
-<li><button type="button" class="portfolio-filer"> Приложения</button></li>
-<li><button type="button" class="portfolio-filer">Дизайн</button></li>
-<li><button type="button" class="portfolio-filer"> Маркетинг</button></li>
-</ul>
-</section>
+      </nav>
+      <ul>
+        <li>
+          <a class="studio header-phone header-list" href="link"
+            >info@devstudio</a
+          >
+        </li>
+        <li>
+          <a class="header-phone header-list" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <ul>
+          <li><button type="button" class="about-all">Все</button></li>
+          <li>
+            <button type="button" class="portfolio-filer">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-filer">Приложения</button>
+          </li>
+          <li><button type="button" class="portfolio-filer">Дизайн</button></li>
+          <li>
+            <button type="button" class="portfolio-filer">Маркетинг</button>
+          </li>
+        </ul>
+      </section>
 
-    <ul>
-        <li><img class="" src="./img/img (7).jpg"><h3 class="title-item">Технокряк</h3>
-        <p class="portfolio-item-name">Веб-сайт</p></li>
-        <li><img src="./img/img (8).jpg" alt=""><h3 class="title-item">Постер New Orlean vs Golden Star</h3><p class="portfolio-item-name">Дизайн</p></li>
-        <li><img src="./img/img (9).jpg"><h3 class="title-item">Ресторан Seafood</h3>
-        <p class="portfolio-item-name">Приложение</p></li>
-        <li><img src="./img/img (10).jpg"><h3 class="title-item">Проект Prime</h3>
-        <p class="portfolio-item-name">Маркетинг</p></li>
-        <li><img src="./img/img (11).jpg"><h3 class="title-item">Проект Boxes</h3>
-        <p class="portfolio-item-name">Приложение</p></li>
-        <li><img src="./img/img (12).jpg"><h3 class="title-item">Inspiration has no Borders</h3>
-        <p class="portfolio-item-name">Веб-сайт</p></li>
-        <li><img src="./img/img (13).jpg"><h3 class="title-item">Издание Limited Edition</h3>
-        <p class="portfolio-item-name">Дизайн</p></li>
-        <li><img src="./img/img (14).jpg"><h3 class="title-item">Проект LAB</h3>
-        <p class="portfolio-item-name">Маркетинг</p></li>
-        <li><img src="./img/img (15).jpg"><h3 class="title-item">Growing Business</h3>
-        <p class="portfolio-item-name">Приложение</p></li>
-    </ul>
-</main>
-<footer class="about-us">
-    <ul>
-        <h3 class="style-studio-name"><span class="studio-name">Web</span><span class="studio-name-2">Studio</span></h3>
+      <ul>
+        <li>
+          <img class="" src="./img/img7.jpg" />
+          <h3 class="title-item">Технокряк</h3>
+          <p class="portfolio-item-name">Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./img/img8.jpg" alt="" />
+          <h3 class="title-item">Постер New Orlean vs Golden Star</h3>
+          <p class="portfolio-item-name">Дизайн</p>
+        </li>
+        <li>
+          <img src="./img/img9.jpg" />
+          <h3 class="title-item">Ресторан Seafood</h3>
+          <p class="portfolio-item-name">Приложение</p>
+        </li>
+        <li>
+          <img src="./img/img10.jpg" />
+          <h3 class="title-item">Проект Prime</h3>
+          <p class="portfolio-item-name">Маркетинг</p>
+        </li>
+        <li>
+          <img src="./img/img11.jpg" />
+          <h3 class="title-item">Проект Boxes</h3>
+          <p class="portfolio-item-name">Приложение</p>
+        </li>
+        <li>
+          <img src="./img/img12.jpg" />
+          <h3 class="title-item">Inspiration has no Borders</h3>
+          <p class="portfolio-item-name">Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./img/img13.jpg" />
+          <h3 class="title-item">Издание Limited Edition</h3>
+          <p class="portfolio-item-name">Дизайн</p>
+        </li>
+        <li>
+          <img src="./img/img14.jpg" />
+          <h3 class="title-item">Проект LAB</h3>
+          <p class="portfolio-item-name">Маркетинг</p>
+        </li>
+        <li>
+          <img src="./img/img15.jpg" />
+          <h3 class="title-item">Growing Business</h3>
+          <p class="portfolio-item-name">Приложение</p>
+        </li>
+      </ul>
+    </main>
+    <footer class="about-us">
+      <ul>
+        <h3 class="style-studio-name">
+          <span class="studio-name">Web</span
+          ><span class="studio-name-2">Studio</span>
+        </h3>
         <li class="adress footer-contacts">г.Киев,пр-т Леси Украинки,26</li>
-        <li><a class="our-tell footer-contacts" href="@example.com"> @example.com</a></li>
-        <li><a class="our-tell footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
-    </ul>
-</footer>
-
-
-    
-</body>
+        <li>
+          <a class="our-tell footer-contacts" href="@example.com">
+            @example.com</a
+          >
+        </li>
+        <li>
+          <a class="our-tell footer-contacts" href="tel:+380991111111"
+            >+38 099 111 11 11</a
+          >
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
