--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,9 @@
           ><span class="studio-name-header">Studio</span></a
         >
         <ul>
-          <li><a class="portfolio header-list" href="link">Студия</a></li>
+          <li>
+            <a class="portfolio header-list" href="./index.html">Студия</a>
+          </li>
           <li><a class="studio header-list" href="link">Портфолио</a></li>
           <li><a class="portfolio header-list" href="link">Контакты</a></li>
         </ul>
